--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -17,14 +17,25 @@
 }
 
 .footer {
-  background: #2f4858;
-  padding: 40px 62px 0 62px;
+  position: relative;
+  height: 376px;
 }
 
 @media screen and (max-width: 640px) {
   .footer {
     padding: 40px 20px 0 20px;
   }
+}
+
+.footer .footer_top {
+  width: 100%;
+  height: 52px;
+  background: url("/assets/img/footer_border.png");
+}
+
+.footer .footer_content {
+  background: #2f4858;
+  padding: 0 62px;
 }
 
 .footer .footer_wrap {
