--- a/assets/css/scss/supporters.scss
+++ b/assets/css/scss/supporters.scss
@@ -8,7 +8,8 @@
 
 // Supporters
 .supporters {
-    height: 482px;
+    position: relative;
+    height: 450px;
     background: url("/assets/img/Subtract.png");
     @include tablet {
         height: 300px;
@@ -62,17 +63,11 @@
         }
     }
     .supporters_bottom {
-        z-index: -1;
-        position:relative;
-        bottom: -108px;
-        height: 200px;
-        background: $blue;
-        @include tablet {
-            bottom: -20px;
-        }
-        @include mobile {
-            bottom: -50px;
-        }
+        position: absolute;
+        bottom: -60px;
+        width: 100%;
+        height: 60px;
+        background: $yellow;
     }
 }
 
