--- a/assets/css/supporters.css
+++ b/assets/css/supporters.css
@@ -17,7 +17,8 @@
 }
 
 .supporters {
-  height: 482px;
+  position: relative;
+  height: 450px;
   background: url("/assets/img/Subtract.png");
 }
 
@@ -105,22 +106,10 @@
 }
 
 .supporters .supporters_bottom {
-  z-index: -1;
-  position: relative;
-  bottom: -108px;
-  height: 200px;
-  background: #2f4858;
-}
-
-@media screen and (max-width: 768px) {
-  .supporters .supporters_bottom {
-    bottom: -20px;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .supporters .supporters_bottom {
-    bottom: -50px;
-  }
+  position: absolute;
+  bottom: -60px;
+  width: 100%;
+  height: 60px;
+  background: #ffcb66;
 }
 /*# sourceMappingURL=supporters.css.map */
